# start-at-olist-backend

./: README.md  local.env  pyproject.toml
api/api/: settings.py  urls.py
api/apps/calls/: models.py  serializers.py  urls.py  views.py
api/apps/calls/migrations/: 0001_initial.py  0002_auto_20210316_1422.py  0003_callendrecord_call_id.py  0004_auto_20210317_2027.py  0005_callrecord.py  0006_auto_20210318_1345.py  0007_auto_20210405_1955.py  0008_callrecord_is_completed.py  0009_auto_20210406_1340.py  0010_auto_20210406_1415.py  0011_auto_20210406_1434.py  0012_auto_20210406_1436.py  0013_auto_20210406_1449.py  0014_remove_callrecord_duration.py  0015_callrecord_duration.py  0016_bill_source.py  0017_auto_20210407_1336.py
